--- a/opencve/templates/cve.html
+++ b/opencve/templates/cve.html
@@ -146,45 +146,6 @@
                 </div>
                 {% endif %}
             </div>
-
-            <div class="box box-primary">
-                <div class="box-header">
-                    <div class="box-title">History</div>
-                    <div class="box-tools pull-right">
-                        <button type="button" class="btn btn-box-tool" data-widget="collapse"><i
-                                class="fa fa-minus"></i></button>
-                    </div>
-                </div>
-                {% if events_by_time %}
-                <div class="box-body">
-                    <div class="row">
-                        <div class="col-md-12">
-                            {% for time, events in events_by_time %}
-                            <p><strong><i class="fa fa-clock-o"></i> {{ time.strftime("%d %b %Y, %H:%M") }}</strong></p>
-                            <table class="table table-bordered table-striped">
-                                <thead>
-                                    <th>Type</th>
-                                    <th>Values Removed</th>
-                                    <th>Values Added</th>
-                                </thead>
-                                <tbody>
-                                {% for event in events %}
-                                    {% set template = 'report/' + event.type.code + '_details.html' %}
-                                    {% include template %}
-                                {% endfor %}
-                                </tbody>
-                            </table>
-                            <hr />
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
-                {% else %}
-                <div class="box-body">
-                    <p class="alert alert-info">No history.</p>
-                </div>
-                {% endif %}
-            </div>
         </div>
 
         <div class="col-md-3">
@@ -207,6 +168,38 @@
                         title="{{ tag.description }}"
                     >{{ render_tag(tag) }}</a>
                     {% endfor %}
+                </div>
+                {% endif %}
+            </div>
+            {% endif %}
+
+            {% if current_user.is_authenticated %}
+            <div class="box box-primary">
+                <div class="box-header">
+                    <h3 class="box-title">Impacted categories</h3>
+                </div>
+                {% if current_user.categories %}
+                <div class="box-body box-subscriptions">
+                    {% set displayedCategories = [] %}
+                    {% for category in current_user.categories %}
+                        {% for v in cve.vendors %}
+                            {% for vendor in category.vendors %}
+                                {% if vendor.name == v and category not in displayedCategories %}
+                                    <a class="label label-primary" href="{{ url_for('main.category',category_name=category.name) }}" >{{ category.name  | humanize }}   </a>
+                                    {% set displayedCategories = displayedCategories.append(category) %}
+                                {% endif %}
+                            {% endfor %}
+                            {% for product in category.products %}
+                                {% if product.name in v.split("$")[2] and category not in displayedCategories %}
+                                    <a class="label label-primary" href="{{ url_for('main.category',category_name=category.name) }}" >{{ category.name | humanize }} </a>
+                                    {% set displayedCategories = displayedCategories.append(category) %}
+                                {% endif %}
+                            {% endfor %}
+                        {% endfor %}
+                    {% endfor %}
+                    {% if not displayedCategories %}
+                    <span class="label label-default">None</span>
+                    {% endif %}
                 </div>
                 {% endif %}
             </div>
