--- a/opencve/templates/cve.html
+++ b/opencve/templates/cve.html
@@ -187,7 +187,7 @@
             {% endif %}
 
             {% if current_user.is_authenticated %}
-            <div class="box box-primary">
+            <!-- <div class="box box-primary">
                 <div class="box-header">
                     <h3 class="box-title">Impacted categories</h3>
                 </div>
@@ -215,7 +215,7 @@
                     {% endif %}
                 </div>
                 {% endif %}
-            </div>
+            </div> -->
             {% endif %}
 
             <div class="box box-primary">
